<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="article"
            type="dataaccess.ArticleDTO" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/card_view_detail"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title -->
            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginBottom="16dp"
                android:text="@{article.title}" />

            <!-- Image -->
            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="16dp"
                app:imageUrl="@{article.imageUrl}" />

            <!-- News Site -->
            <TextView
                android:id="@+id/news_site_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:text="@{`Published by: ` + article.newsSite}" />

            <!-- Published At -->
            <TextView
                android:id="@+id/published_at_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                android:text="@{`Published At: ` + article.publishedAt}" />

            <!-- Updated At -->
            <TextView
                android:id="@+id/updated_at_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                android:text="@{`Updated At: ` + article.updatedAt}" />

            <TextView
                android:id="@+id/summary_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:text="@{article.summary}" />
        </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</layout>
